Use ubuntu-latest image. As it now contains the fcitx 5.0.5 development library.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,7 @@ on:
 jobs:
   build:
     if: contains(github.event.head_commit.message, 'deploy+') == false
-    # Ubuntu latest image (20.04) doesn't have fcitx 5.0.5 development library which we require.
-    # So we have to run our CI under Ubuntu 22.04 image.
-    runs-on: "ubuntu-22.04"
+    runs-on: "ubuntu-latest"
     strategy:
       matrix:
         env:
